--- a/blocks/template_banner/template_banner.sass
+++ b/blocks/template_banner/template_banner.sass
@@ -1,3 +1,6 @@
+.template_banner--v3
+  margin-top: 0
+
 .template_banner__button-container
   position: relative
 
@@ -28,3 +31,4 @@
   .template_banner__button-img
     width: 179px
     right: -105px
+
