--- a/blocks/catalog-sections/catalog-sections.sass
+++ b/blocks/catalog-sections/catalog-sections.sass
@@ -19,7 +19,6 @@
   background-color: #E3E3E3
   min-height: 180px
   border-radius: 24px
-  overflow: hidden
   padding: 16px
 
 .catalog-sections-card-bg
@@ -72,24 +71,73 @@
     display: flex
 
   .catalog-sections__button
+    position: relative
+    z-index: 0
     display: flex
     align-items: center
     justify-content: center
     text-transform: none
+    border-radius: 24px
+    background-color: #E3E3E3
+    color: #DA291C
+    transition: color $default-transition
+
+  .catalog-sections__button:before
+    content: ''
+    opacity: 0
+    +absoluteFluid
+    z-index: -1
+    border-radius: 24px
     background: linear-gradient(137.54deg, #981119 0.9%, #DA291C 101.96%)
     box-shadow: -15px 24px 11px rgba(176, 176, 176, 0.01), -8px 13px 9px rgba(176, 176, 176, 0.05), -4px 6px 7px rgba(176, 176, 176, 0.09), -1px 1px 4px rgba(176, 176, 176, 0.1)
-    border-radius: 24px
+    transition: opacity $default-transition
 
-+mq(tablet)
+  .catalog-sections__button:hover
+    color: #fff
+
+  .catalog-sections__button:hover:before
+    opacity: 1
+
++mq(desktop)
+  .catalog-sections__title
+    font-size: 40px
+    margin-bottom: 40px
+
   .catalog-sections-list
     gap: 36px 16px
 
   .catalog-sections-card
+    position: relative
+    z-index: 0
     padding: 16px 24px 24px
     min-height: 272px
 
+  .catalog-sections-card:before
+    content: ''
+    opacity: 0
+    +absoluteFluid
+    z-index: -1
+    border-radius: 24px
+    background: linear-gradient(137.54deg, #981119 0.9%, #DA291C 101.96%)
+    box-shadow: -15px 24px 11px rgba(176, 176, 176, 0.01), -8px 13px 9px rgba(176, 176, 176, 0.05), -4px 6px 7px rgba(176, 176, 176, 0.09), -1px 1px 4px rgba(176, 176, 176, 0.1)
+    transition: opacity $default-transition
+
+  .catalog-sections-card:hover:before
+    opacity: 1
+    
+  .catalog-sections-card:hover .catalog-sections-card__title
+    color: #fff
+
+  .catalog-sections-card:hover .catalog-sections-card-bg
+    transform: scale(1.02)
+    transform-origin: top center
+
+  .catalog-sections-card-bg
+    transition: transform $default-transition
+
   .catalog-sections-card__title
     font-size: 32px
+    transition: color $default-transition
 
   .catalog-sections__button
     padding: 24px
