--- a/blocks/steps/steps.sass
+++ b/blocks/steps/steps.sass
@@ -99,6 +99,7 @@
   .steps
     display: flex
     gap: 16px
+
   .steps-main
     display: flex
     flex-direction: column
@@ -109,7 +110,25 @@
   .steps-button-container
     order: 1
 
+  +mq(desktop, max)
+    .steps
+      align-items: flex-start
+
 +mq(desktop)
+  .steps-top
+    margin-bottom: 40px
+
+  .steps__title
+    font-size: 40px
+
   .steps__subtitle
     margin-top: 40px
     font-size: 24px
+
+  .steps-main
+    width: 480px
+    padding-top: 87px
+    flex-shrink: 0
+
+  .steps-list
+    grid-template-columns: repeat(2, minmax(0, 1fr))
