--- a/blocks/header/header.sass
+++ b/blocks/header/header.sass
@@ -19,7 +19,7 @@
   border: 1px solid #101820
   transition: border $default-transition, background-color $default-transition
 
-.header-search-form:has(.header-search-form__control:focus)
+.header-search-form:has(.header-search-form__submit:hover)
   background-color: #DA291C
 
 .header-search-form-group
@@ -257,3 +257,4 @@
     font-weight: 400
     font-size: 14px
     line-height: 1
+    white-space: nowrap
