--- a/blocks/steps/steps.sass
+++ b/blocks/steps/steps.sass
@@ -132,3 +132,9 @@
 
   .steps-list
     grid-template-columns: repeat(2, minmax(0, 1fr))
+  
+  .steps__button
+    transition: background-color $default-transition
+
+  .steps__button:hover
+    background-color: #101820
