--- a/blocks/why-us/why-us.sass
+++ b/blocks/why-us/why-us.sass
@@ -63,6 +63,10 @@
   grid-template-columns: repeat(2, minmax(0, 1fr))
   gap: 40px 25px
 
+.why-us-card
+  position: relative
+  z-index: 0
+
 .why-us-card-image
   width: 100%
   height: 62px
@@ -110,6 +114,51 @@
   .why-us-main-card
     min-height: 188px
     padding: 24px 20px
+    background-color: #000000
+    transition: background $default-transition
+    
+  .why-us-main-card:hover
+    background-color: #DA291C
+
+  .why-us-main-card:hover .why-us-main-card-bg__img
+    transform: scale(1.1, 1.1)
+
+  .why-us-main-card:hover .why-us-main-card-bg:after
+    opacity: 1
+
+  .why-us-main-card:hover .why-us-main-card-bg:before
+    opacity: 0
+    transition: opacity $default-transition 0.15s
+
+  .why-us-main-card-bg
+    left: 40%
+    width: auto
+    max-width: 100%
+    border-radius: 0
+    z-index: -2
+
+  .why-us-main-card-bg__img
+    position: relative
+    z-index: -2
+    transition: transform $default-transition
+
+  .why-us-main-card-bg:after,
+  .why-us-main-card-bg:before
+    content: ''
+    position: absolute
+    top: 0
+    left: 0
+    bottom: 0
+    width: 40%
+    transition: opacity $default-transition
+
+  .why-us-main-card-bg:before
+    background: linear-gradient(270.04deg, rgba(0, 0, 0, 0) 51.16%, #000000 70.03%)
+    transition: opacity 0.15s
+
+  .why-us-main-card-bg:after
+    opacity: 0
+    background: linear-gradient(270.04deg, rgba(0, 0, 0, 0) 47.36%, #DA291C 66.13%)
 
   .why-us-main-card__value
     font-size: 64px
