--- a/blocks/catalog-sections/catalog-sections.sass
+++ b/blocks/catalog-sections/catalog-sections.sass
@@ -98,6 +98,9 @@
   .catalog-sections__button:hover:before
     opacity: 1
 
++mq(desktop, max)
+  .catalog-sections-card
+    overflow: hidden
 +mq(desktop)
   .catalog-sections__title
     font-size: 40px
